force-app/main/default/objects/Scanned_Business_Cards__c/Scanned_Business_Cards__c.object-meta.xml
<CustomObject>
    <label>Scanned Business Card</label>
    <nameField>
        <displayFormat>Card-{00000000}</displayFormat>
        <label>Card Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scanned Business Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>