force-app/main/default/objects/Scanned_Business_Cards__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automatically populated based on matching logic</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scanned Business Cards</relationshipLabel>
    <relationshipName>Scanned_Business_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>