force-app/main/default/objects/Scanned_Business_Cards__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Used for populating the Name of the Account as indicated on the business card.</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>