force-app/main/default/objects/Scanned_Business_Cards__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Logical one line output of Address fields (Street1, Street2, City, County, Country, Post Code)</description>
    <formula>if(LEN( Street1__c ) > 0, Street1__c &amp; ", " , "" ) &amp;
if(LEN( Street2__c )> 0, Street2__c &amp; ", " , "" ) &amp; BR() &amp;
if(LEN( City__c )> 0, City__c &amp; ", " , ", " ) &amp; BR() &amp;
if(LEN( Country__c ) > 0, Country__c&amp; ", " , ", " ) &amp; BR() &amp;
If(LEN( Postcode__c ) > 0, Postcode__c, "" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>