force-app/main/default/objects/Scanned_Business_Cards__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>IF(ISBLANK(First_Name__c) , Last_Name__c, First_Name__c + ' ' +  Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>