force-app/main/default/objects/Scanned_Business_Cards__c/fields/Created_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Id__c</fullName>
    <description>Stores the external id of the user who created the record.</description>
    <externalId>true</externalId>
    <label>Created By Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>