force-app/main/default/objects/Scanned_Business_Cards__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Used for populating the Email of individual as indicated on the business card</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>