force-app/main/default/objects/Scanned_Business_Cards__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Used for populating the Fax of individual as indicated on the business card</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>