force-app/main/default/objects/Scanned_Business_Cards__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Used for populating the First Name of individual as indicated on the business card</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>