force-app/main/default/objects/Scanned_Business_Cards__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>if(LEN( First_Name__c ) > 0, 'Salutation ' + First_Name__c &amp; ", " , "" ) &amp;
if(LEN( Last_Name__c )> 0, Last_Name__c  &amp; ", " , "" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>