force-app/main/default/objects/Scanned_Business_Cards__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Used for populating the Last Name of individual as indicated on the business card</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>