force-app/main/default/objects/Scanned_Business_Cards__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Used for populating the Mobile of individual as indicated on the business card.</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>