force-app/main/default/objects/Scanned_Business_Cards__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Used for tracking notes associated to this business card</description>
    <label>Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>