force-app/main/default/objects/Scanned_Business_Cards__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Used for populating the Phone of individual as indicated on the business card.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>