force-app/main/default/objects/Scanned_Business_Cards__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Used for populating the salutation of individual as indicated on the business card</description>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>