force-app/main/default/objects/Scanned_Business_Cards__c/fields/State_Country__c.field-meta.xml
<CustomField>
    <fullName>State_Country__c</fullName>
    <label>State / Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>