force-app/main/default/objects/Scanned_Business_Cards__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Stores the status of the business card. Incomplete indicates card has been scanned but not mapped to contact &amp; account, while complete indicates card is scanned and mapped to contact / account</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>