force-app/main/default/objects/Scanned_Business_Cards__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Used for populating the Title of individual as indicated on the business card</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>